# template-scala-simple-server

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  buildbuddy.yaml
server/: BUILD.bazel  Server.java  Server.scala
