load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@io_bazel_rules_docker//scala:image.bzl", "scala_image")
load("@genrules//google_cloud_run:index.bzl", "deploy")

package(default_visibility = ["//visibility:public"])

scala_binary(
    name = "server",
    srcs = ["Server.scala"],
    main_class = "Server",
)

scala_image(
    name = "server_image",
    srcs = ["Server.scala"],
    main_class = "Server",
)

deploy(
    name="scala_service",
    target=":server_image",
)
