load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@genrules//google_cloud_run:index.bzl", "deploy")

package(default_visibility = ["//visibility:public"])

scala_binary(
    name = "server",
    srcs = ["Server.scala"],
    main_class = "Server",
)

deploy(
    name="scala_service",
    binary=":server_deploy.jar",
    base_image="gcr.io/distroless/java",
)
